Add link to lcpu

--- a/matrix.tex
+++ b/matrix.tex
@@ -54,6 +54,7 @@
         \node[rectangle, rounded corners=2pt, minimum width=\rectWidth cm, minimum height=\rectHeight cm, fill=\currentcolor] at (\x,\y) {};
     }
 }
+\node at (12.2, -1.82) {\colorbox{white}{\scriptsize https://lcpu.club}};
 
 \end{tikzpicture}
 
