Add sample output

--- a/matrix.tex
+++ b/matrix.tex
@@ -1,7 +1,12 @@
 \documentclass{article}
 \usepackage{tikz}
+\usepackage{verbatim}
+\usepackage[active,tightpage]{preview}
+\PreviewEnvironment{tikzpicture}
+\setlength\PreviewBorder{5pt}%
 
 \begin{document}
+\pagestyle{empty}
 
 \begin{tikzpicture}
 % 定义颜色数组
